Fixed text wrapping issue on Listen messages, as per Trac #1301
git-svn-id: https://svn.socialplanning.org/svn/opencore/trunk/opencore@8350 40f73b84-6177-4a8e-8c61-7eee4b1974ed

--- a/nui/css/opencore.css
+++ b/nui/css/opencore.css
@@ -715,7 +715,7 @@ a.wickedadd {
   display: block;
 }
 .oc-listen-message pre.oc-listen-message-body {
-  /* white-space: normal; */
+  width: 100%;
 }
 .oc-listen-message-child {
   border-top: 1px solid #ccc;
